Add LessonPart API update action
