# docs/swagger/v1/swagger.json
@@ -423,6 +423,166 @@
         }
       }
     },
+    "/ccps/{ccp_id}/units/{unit_id}/lessons/{lesson_id}/lesson_parts/{id}": {
+      "get": {
+        "summary": "retrieves a single lesson part belonging to the specified CCP, unit and lesson",
+        "tags": [
+          "LessonPart"
+        ],
+        "parameters": [
+          {
+            "name": "ccp_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "unit_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "lesson_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "properties": {
+                  "$ref": "#/components/schemas/lesson_part",
+                  "required": [
+                    "lesson_part"
+                  ]
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "lesson part found",
+            "examples": {
+              "application/json": {
+                "name": "Lesson 3",
+                "summary": "Lesson 3",
+                "core_knowledge": "Core knowledge",
+                "previous_knowledge": {
+                  "Previous knowledge": "Yes"
+                },
+                "vocabulary": [
+                  "Subtraction",
+                  "Division",
+                  "Multiplication"
+                ],
+                "misconceptions": [
+                  "Fractions are not natural numbers"
+                ],
+                "id": 1
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/lesson_part"
+                }
+              }
+            }
+          }
+        }
+      },
+      "patch": {
+        "summary": "update the referenced lesson part",
+        "tags": [
+          "LessonPart"
+        ],
+        "parameters": [
+          {
+            "name": "ccp_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "unit_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "lesson_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "properties": {
+                  "lesson_part": {
+                    "$ref": "#/components/schemas/lesson_part",
+                    "required": [
+                      "lesson_part"
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "lesson part updated",
+            "examples": {
+              "application/json": {
+                "lesson_part": {
+                  "position": 2
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "invalid lesson part"
+          }
+        }
+      }
+    },
     "/ccps/{ccp_id}/units/{unit_id}/lessons": {
       "get": {
         "summary": "retrieves all lessons belonging to the specified CCP and unit",
@@ -453,8 +613,8 @@
             "examples": {
               "application/json": [
                 {
-                  "name": "Lesson 3",
-                  "summary": "Lesson 3",
+                  "name": "Lesson 4",
+                  "summary": "Lesson 4",
                   "core_knowledge": "Core knowledge",
                   "previous_knowledge": {
                     "Previous knowledge": "Yes"
@@ -470,8 +630,8 @@
                   "id": 1
                 },
                 {
-                  "name": "Lesson 4",
-                  "summary": "Lesson 4",
+                  "name": "Lesson 5",
+                  "summary": "Lesson 5",
                   "core_knowledge": "Core knowledge",
                   "previous_knowledge": {
                     "Previous knowledge": "Yes"
@@ -547,8 +707,8 @@
             "examples": {
               "application/json": {
                 "lesson": {
-                  "name": "Lesson 5",
-                  "summary": "Lesson 5",
+                  "name": "Lesson 6",
+                  "summary": "Lesson 6",
                   "core_knowledge": "Core knowledge",
                   "previous_knowledge": {
                     "Previous knowledge": "Yes"
@@ -623,8 +783,8 @@
             "description": "lesson found",
             "examples": {
               "application/json": {
-                "name": "Lesson 6",
-                "summary": "Lesson 6",
+                "name": "Lesson 7",
+                "summary": "Lesson 7",
                 "core_knowledge": "Core knowledge",
                 "previous_knowledge": {
                   "Previous knowledge": "Yes"
@@ -704,8 +864,8 @@
             "examples": {
               "application/json": {
                 "lesson": {
-                  "name": "Lesson 7",
-                  "summary": "Lesson 7",
+                  "name": "Lesson 8",
+                  "summary": "Lesson 8",
                   "core_knowledge": "Core knowledge",
                   "previous_knowledge": {
                     "Previous knowledge": "Yes"
@@ -869,8 +1029,8 @@
                 },
                 "lessons": [
                   {
-                    "name": "Lesson 8",
-                    "summary": "Lesson 8",
+                    "name": "Lesson 9",
+                    "summary": "Lesson 9",
                     "core_knowledge": "Core knowledge",
                     "previous_knowledge": {
                       "Previous knowledge": "Yes"
@@ -886,8 +1046,8 @@
                     "id": 1
                   },
                   {
-                    "name": "Lesson 9",
-                    "summary": "Lesson 9",
+                    "name": "Lesson 10",
+                    "summary": "Lesson 10",
                     "core_knowledge": "Core knowledge",
                     "previous_knowledge": {
                       "Previous knowledge": "Yes"
@@ -903,8 +1063,8 @@
                     "id": 2
                   },
                   {
-                    "name": "Lesson 10",
-                    "summary": "Lesson 10",
+                    "name": "Lesson 11",
+                    "summary": "Lesson 11",
                     "core_knowledge": "Core knowledge",
                     "previous_knowledge": {
                       "Previous knowledge": "Yes"
